# pzadev-picoha

./: .gitignore  README.md
projects/: README.md
projects/PWM/: Cargo.toml  README.md
projects/PWM/.cargo/: config.toml
projects/PWM/src/: main.rs
projects/PWM/src/app/: mod.rs
projects/PWM/src/board/: mod.rs
projects/PWM/src/platform/: mod.rs  platform_impl.rs  usb_config.rs
projects/PWM/src/platform_io/: mod.rs  pwm_ctrl.rs
projects/PWM/src/pwm_functions/: mod.rs
projects/i2c_master_firmware/: README.md
projects/i2c_master_firmware/src/: Cargo.toml
projects/i2c_master_firmware/src/common/protocols/: Cargo.toml
projects/i2c_master_firmware/src/common/protocols/src/: ha.rs  i2c.rs  lib.rs
projects/i2c_master_firmware/src/src/: main.rs
projects/spi/: README.md
projects/spi/img/schematic/: Set-up_picoHa_spi.uxf
projects/spi_master/: Cargo.toml  Dockerfile  README.md  intermediate_objectives.md
projects/spi_master/.devcontainer/: devcontainer.json
projects/spi_master/src/: main.rs  main2.txt
projects/template/: README.md
projects/uart/: README.md
projects/uart/examples/: test.py
projects/uart/examples/device/: __init__.py  uart.py
projects/uart/examples/protocol/: common.py  framing.py  parser.py  slip.py  (+1 more)
projects/uart/src/: Cargo.toml  Justfile
projects/uart/src/picoha-uart/: Cargo.toml  build.rs
projects/uart/src/picoha-uart/src/: main.rs
projects/uart/src/picoha-uart/src/app/: mod.rs
projects/uart/src/picoha-uart/src/board/: mod.rs
projects/uart/src/picoha-uart/src/platform/: mod.rs  platform_impl.rs  usb_config.rs
(+13 files in other folders)
