[package]
name = "i2c_master_rp2040"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
fugit = "0.3.7"
heapless = "0.7.16"
i2c-pio = "0.7.0"
panic-halt = "0.2.0"
rp-pico = "0.8.0"
rpi-pico-sdk-sys = "0.0.2"
sleep = "1.0.1"
usb-device = "0.2.9"
rp2040 = "0.1.0"
usbd-serial = "0.1.1"
fmt = "0.1.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "*", features = ["rp2040-e5"] }
#embedded-hal = { version = "0.2.7", features = ["blocking-i2c"] }
