[package]
name    = "picoha-uart"
version = "0.0.1"
edition = "2021"

[dependencies]

# -- Functional crates

const-random  = "0.1.15"
heapless      = "0.7.16"
defmt         = "0.3.4"
defmt-rtt     = "0.4.0"


# -- Embedded hal crates

embedded-hal  = "0.2.7"
embedded-time = "0.12.1"
panic-probe   = { version="0.3.1"}


# -- USB related crates

usb-device    = "0.2.9"
usbd-serial   = "0.1.1"


# -- Cortex-m support crates

cortex-m      = "0.7"
cortex-m-rt   = "0.7"


# -- RP-pico support crates 

rp2040-boot2  = { version="0.2.0", optional = true }
rp-pico       = "0.3.0"


# -- Local crates

protocol     = {path = "../common/protocol"}


[features]
boot2 = ["rp2040-boot2"]